# openGL2

./: Makecache  Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
data/: Makefile  Makefile.in
po/: Makefile  Makefile.in
src/: Makefile.am  demo.cpp  demo.cpp.old
src/LearnOpenGL/: hello_triangle.cpp  hello_triangle_indexed.cpp  root_directory.h  shaders_class.cpp  shaders_interpolation.cpp  shaders_uniform.cpp  texture.cpp
src/LearnOpenGL/learnopengl/: shader_s.h
src/LearnOpenGL_Lession1/: hello_window_clear.cpp
src/Lession3/: demo.cpp  triangle.f.glsl  triangle.v.glsl
src/Lession4/: demo.cpp  t.f.glsl  triangle.f.glsl
src/Lession5/: cube.cpp
src/Lession6/: cube.cpp
src/common/: shader_utils.cpp  shader_utils.h
